package DuckExample;

public class Fly_At_More_Height implements FlyBehaviour {

  @Override
  public void fly() {
    System.out.println("I fly at more height");
  }
}
